@@ -1,3 +1,7 @@
+2010-04-19  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* help/C/nwam-manager.xml: Merge Nita's fix.
+
 2010-04-16  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* Makefile.am: Removed unused headers.
